--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,5 @@
-
 <header>
-	<h1>Static Header</h1>
+	<h1>Weather app</h1>
 	<a href="/">Weather</a>
 	<a href="/about">About</a>
 	<a href="/help">Help</a>
